preflight/impl/tests/ui/fail-arguments.stderr
error: Unknown field: `arg`
  --> $DIR/fail-arguments.rs:14:49
   |
14 | #[avionics_harness(default = "Controller::new", arg = "ument")]
   |                                                 ^^^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-arguments.rs:3:40
  |
3 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: `#[panic_handler]` function required, but not found

error: language item required, but not found: `eh_personality`
